--- a/templates/genre.html
+++ b/templates/genre.html
@@ -54,32 +54,57 @@
     
     <hr>
 
-    <section class="py-10 px-5">
+    <section class="py-10 px-5 relative">
     
         <div align="center">
             <h2 class="text-xl mb-5">
                 '{{movie_genre | title}}' Films
             </h2>
         </div>
-        <div class="flex space-x-5 overflow-x-auto">
-
-            {% for movie in movies %}
-            <div class="w-40 h-64 flex-shrink-0 film-card"
-                onclick="showModal(this)" 
-                data-title="{{ movie.title }}"
-                data-description="{{ movie.description }}"
-                data-release-date="{{ movie.release_date|date:'Y' }}"
-                data-genre="{{ movie.get_genre_display }}" 
-                data-length="{{ movie.length }}"
-                data-image-card-url="{{ movie.image_card.url }}"
-                data-image-cover-url="{{ movie.image_cover.url }}"
-                data-video-url="/movie/{{ movie.uu_id }}"
-                style="background-image: url('{{movie.image_card.url}}'); background-size: cover; background-position: center;">
+        <div class="carousel-container relative">
+            <button class="scroll-button left-0 absolute h-full w-12 bg-gradient-to-r from-black via-transparent to-transparent text-white text-3xl font-bold z-10 opacity-75 hover:opacity-100">
+                &#10094;
+            </button>
+            <div class="flex space-x-5 overflow-x-auto carousel">
+                {% for movie in movies %}
+                <div class="w-40 h-64 flex-shrink-0 film-card"
+                    onclick="showModal(this)" 
+                    data-title="{{ movie.title }}"
+                    data-description="{{ movie.description }}"
+                    data-release-date="{{ movie.release_date|date:'Y' }}"
+                    data-genre="{{ movie.get_genre_display }}" 
+                    data-length="{{ movie.length }}"
+                    data-image-card-url="{{ movie.image_card.url }}"
+                    data-image-cover-url="{{ movie.image_cover.url }}"
+                    data-video-url="/movie/{{ movie.uu_id }}"
+                    style="background-image: url('{{movie.image_card.url}}'); background-size: cover; background-position: center;">
+                </div>
+                {% endfor %}
             </div>
-            {% endfor %}
+            <button class="scroll-button right-0 absolute h-full w-12 bg-gradient-to-l from-black via-transparent to-transparent text-white text-3xl font-bold z-10 opacity-75 hover:opacity-100">
+                &#10095;
+            </button>
+        </div>
     </section>
     
-   
+    <script>
+        const carousel = document.querySelector('.carousel');
+        const scrollButtons = document.querySelectorAll('.scroll-button');
+    
+        scrollButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                const direction = button.classList.contains('left-0') ? -1 : 3;
+                carousel.scrollBy({ left: 200 * direction, behavior: 'smooth' });
+            });
+        });
+    
+        carousel.addEventListener('wheel', (event) => {
+            if (event.deltaY !== 0) {
+                event.preventDefault();
+                carousel.scrollBy({ left: event.deltaY < 0 ? -200 : 200, behavior: 'smooth' });
+            }
+        });
+    </script>
 
     <!-- Modal -->
     <div class="modal" id="movieModal">
