Update add_to_list function

--- a/templates/index.html
+++ b/templates/index.html
@@ -182,9 +182,9 @@
         }
 
         function addItemToList() {
-            const modal = document.getElementById('movieModal')
+            const modal = document.getElementById('movieModal');
             var movieID = modal.querySelector('.modal-content a').href;
-
+    
             $.ajax({
                 url: "{% url 'add-to-list' %}",
                 type: "POST",
@@ -194,14 +194,15 @@
                 },
                 success: function(data) {
                     $('#addToListButton').text(data.message);
-
-                    $('#addToListButton').prop('disabled', true);
-
-                    console.log("Item added to list!");
+    
+                    if (data.status === 'success') {
+                        console.log("Item added to list!");
+                    } else if (data.status === 'info') {
+                        console.log("Item removed from list!");
+                    }
                 },
                 error: function(xhr, errmsg, err) {
-                    
-                    console.error("Error adding item to list: " + errmsg);
+                    console.error("Error adding/removing item to/from list: " + errmsg);
                 }
             });
         }
